--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,78 @@
     <h3>Square Buttons</h3>
     <div class="button"></div>
     <h3>Round Buttons</h3>
-    <div class="button round"></div>
+    <div class="row">
+      <div class="button round disabled">
+        <p>+</p>
+      </div>
+      <div class="button round disabled minus"></div>
+    </div>
+    <div class="row">
+      <div class="button round unfilled">
+        <p>+</p>
+      </div>
+      <div class="button round unfilled minus"></div>
+    </div>
+    <div class="row">
+      <div class="button round filled">
+        <p>+</p>
+      </div>
+      <div class="button round filled minus"></div>
+    </div>
+
+    <div class="row">
+      <div class="button long inactive">
+        <p>INACTIVE</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="button long filled">
+        <p>NORMAL</p>
+      </div>
+      <div class="button long hover">
+        <p>HOVER [web only]</p>
+      </div>
+      <div class="button long click">
+        <p>CLICK/TAP</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="button long filled">
+        <p>&#10003</p>
+      </div>
+      <div class="button long hover">
+        <p>&#10003</p>
+      </div>
+      <div class="button long click">
+        <p>&#10003</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="button long unfilled">
+        <p>NORMAL</p>
+      </div>
+      <div class="button long hover2">
+        <p>HOVER [web only]</p>
+      </div>
+      <div class="button long filled">
+        <p>CLICK/TAP</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="button long unfilled">
+        <p>&#10003</p>
+      </div>
+      <div class="button long hover2">
+        <p>&#10003</p>
+      </div>
+      <div class="button long filled">
+        <p>&#10003</p>
+      </div>
+    </div>
+
   </body>
 </html>
