added javascript files for the tracking page and styled the tracking page

--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,11 @@
   <head>
     <link rel="stylesheet" type="text/css" href="./dist/css/styles.css">
     <script type="text/javascript" src="./dist/scripts/scripts.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+
   </head>
-  <body>
+  <body class="library">
     <h2>Buttons</h2>
     <h3>Square Buttons</h3>
     <div class="button"></div>
@@ -80,6 +83,5 @@
         <p>&#10003</p>
       </div>
     </div>
-
   </body>
 </html>
