--- a/tracker.html
+++ b/tracker.html
@@ -11,11 +11,11 @@
       <div class="navigate">
         <i class="fas fa-arrow-left"></i><i class="fas fa-times"></i>
       </div>
-      <h1><span id="counter">0</span> min</h1>
-      <div class="button-row-round inc" id="5-min">
-        <div class="button round minus"></div>
+      <h1><span id="counter">1400</span> min</h1>
+      <div class="button-row-round inc">
+        <div class="button round minus" id="minus-5"></div>
         <p>5 MINS</p>
-        <div class="button round plus"><p>+</p></div>
+        <div class="button round plus" id="plus-5"><p>+</p></div>
       </div>
 
       <div class="button-row-round inc" id="15-min">
