made calendar component flexible

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <div class="calendar-header">
+  <div class="title-carousel" id="title-carousel" title-arr='["January", "February", "March", "April", "May", "June", "July", "August", "September","October", "November", "December"]'><!-- 
     <p id="left-arrow" class="arrow fas fa-chevron-left"></p>
-    <p id="month">September</p>
-    <p id="right-arrow" class="arrow fas fa-chevron-right"></p>
+    <p id="title">September</p>
+    <p id="right-arrow" class="arrow fas fa-chevron-right"></p> -->
   </div>
   <div class="calendar">
     <div id="calendar-head"></div>
